--- a/projet/Projet.ipynb
+++ b/projet/Projet.ipynb
@@ -784,18 +784,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 96,
    "id": "16f3d578-78c0-43cc-a3eb-12b67de43810",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn import metrics"
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 97,
    "id": "dae7ad56-1d90-44a2-927d-6ee9ada161f5",
    "metadata": {},
    "outputs": [],
@@ -824,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "id": "886a46e6-eda1-4f07-a8ae-00f1e8b77541",
    "metadata": {},
    "outputs": [],
@@ -834,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "id": "f3d0751e-87eb-473a-b495-6bccb3d1cf79",
    "metadata": {},
    "outputs": [],
@@ -847,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 100,
    "id": "0667a270-046e-471e-bc62-62f668391254",
    "metadata": {},
    "outputs": [
@@ -875,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "id": "9f07473f-36e1-4f4d-b939-6e6ac7fad9a3",
    "metadata": {},
    "outputs": [],
@@ -883,12 +882,12 @@
     "opti_neigh_classi = neighbors.KNeighborsClassifier(n_neighbors=1)\n",
     "opti_neigh_classi.fit(X_train, y_train)\n",
     "y_pred_neigh = opti_neigh_classi.predict(X_test)\n",
-    "opti_score = metrics.f1_score(y_pred_neigh,y_test)"
+    "opti_score = f1_score(y_pred_neigh,y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 102,
    "id": "3a1c4d70-c74d-401b-9a30-b953eacc5d17",
    "metadata": {},
    "outputs": [
@@ -936,11 +935,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3edb4e05-3c38-414e-a212-64ac18fef289",
+   "execution_count": 103,
+   "id": "5ebd1801-246d-4c0b-bf30-69ec5019b457",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "f75ae84d-fba8-416a-8c1a-16d0f535f642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logic = LogisticRegression(random_state=42, max_iter=10000)\n",
+    "logic.fit(X_train, y_train)\n",
+    "y_pred_logic = logic.predict(X_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -953,11 +966,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "f1155783-d782-49d4-b69e-1b1e6512e10f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le F-score vaut 0.766\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Le F-score vaut {round(f1_score(y_pred_logic, y_test), 3)}')"
+   ]
   },
   {
    "cell_type": "markdown",
