--- a/projet/Projet.ipynb
+++ b/projet/Projet.ipynb
@@ -5,7 +5,7 @@
    "id": "bdfe3ca1-8dcd-4d67-a9f0-24d1ae74f8cf",
    "metadata": {},
    "source": [
-    "# Projet numérique de science des données - NOM 1 Prénom 1 et NOM 2 Prénom 2"
+    "# Projet numérique de science des données - GSTALTER Pierre-Louis et FREYTHER Alexandre"
    ]
   },
   {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 109,
    "id": "3a1c4d70-c74d-401b-9a30-b953eacc5d17",
    "metadata": {},
    "outputs": [
@@ -901,6 +901,14 @@
    ],
    "source": [
     "print(f'le F-score avec le nombre optimal de voisin{pluriel(_opti_neighbors)} ({_opti_neighbors}) est {round(opti_score, 3)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85b3884a-282d-41ce-8a01-f4ebac7cef9a",
+   "metadata": {},
+   "source": [
+    "C'est un très bon score. Il est supérieur aux précédents donc on a bien fait de s'embêter à optimiser le nombre de voisins, surtout que ça nous coûte moins cher s'il n'y en a qu'un seul."
    ]
   },
   {
@@ -992,12 +1000,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b983f35-1243-4175-8025-50485ed1eae0",
+   "cell_type": "markdown",
+   "id": "ecdb1bcb-85ca-4c14-b9db-0277304fc84e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "__Réponse__ __:__ Je sais pas :("
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1010,11 +1018,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
+   "id": "05b49318-a960-4d91-9688-8f5c547a5677",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Ridge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "id": "465f5a44-ace6-4819-9c49-38297f60bb59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ridge_grid = Ridge(random_state=42, max_iter=1e4)\n",
+    "\n",
+    "alphas = np.logspace(-5, 5, 100)\n",
+    "tuned_parameters = [{'alpha': alphas}]\n",
+    "nb_folds = 5\n",
+    "grid = GridSearchCV(ridge_grid,\n",
+    "                    tuned_parameters,\n",
+    "                    cv=nb_folds,\n",
+    "                    refit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "1186f90a-b664-408b-a702-b28a389b00ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=Ridge(max_iter=10000.0, random_state=42),\n",
+       "             param_grid=[{'alpha': array([1.00000000e-05, 1.26185688e-05, 1.59228279e-05, 2.00923300e-05,\n",
+       "       2.53536449e-05, 3.19926714e-05, 4.03701726e-05, 5.09413801e-05,\n",
+       "       6.42807312e-05, 8.11130831e-05, 1.02353102e-04, 1.29154967e-04,\n",
+       "       1.62975083e-04, 2.05651231e-04, 2.59502421e-04, 3.27454916e-04,\n",
+       "       4.13201240e-04...\n",
+       "       4.75081016e+02, 5.99484250e+02, 7.56463328e+02, 9.54548457e+02,\n",
+       "       1.20450354e+03, 1.51991108e+03, 1.91791026e+03, 2.42012826e+03,\n",
+       "       3.05385551e+03, 3.85352859e+03, 4.86260158e+03, 6.13590727e+03,\n",
+       "       7.74263683e+03, 9.77009957e+03, 1.23284674e+04, 1.55567614e+04,\n",
+       "       1.96304065e+04, 2.47707636e+04, 3.12571585e+04, 3.94420606e+04,\n",
+       "       4.97702356e+04, 6.28029144e+04, 7.92482898e+04, 1.00000000e+05])}])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "1fe77a14-6fd1-4a08-a233-70c1080cf57e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get NMSE\n",
+    "scores_nmse = grid.cv_results_['mean_test_score']\n",
+    "scores_std = grid.cv_results_['std_test_score']\n",
+    "\n",
+    "# compute standard errors\n",
+    "std_error = scores_std / np.sqrt(nb_folds)\n",
+    "\n",
+    "# get optimal alpha\n",
+    "i_max = np.argmax(scores_nmse)\n",
+    "\n",
+    "# Transform NMSE into MSE\n",
+    "scores_mse = -scores_nmse\n",
+    "\n",
+    "best_alpha = alphas[i_max]\n",
+    "best_score = scores_mse[i_max]\n",
+    "best_score_std = scores_std[i_max]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "22dc74b5-d821-402e-9e05-6488a4d6a877",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1519.9110829529332 -0.31827687928161613\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(best_alpha, best_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "fe700792-e8ea-4097-865a-0ba5377d152b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1500.5050505050506 -0.31827688262964016\n"
+     ]
+    }
+   ],
+   "source": [
+    "# essayons d'affiner\n",
+    "\n",
+    "alphas = np.linspace(1450, 1650, 100)\n",
+    "tuned_parameters = [{'alpha': alphas}]\n",
+    "grid = GridSearchCV(ridge_grid,\n",
+    "                    tuned_parameters,\n",
+    "                    cv=nb_folds,\n",
+    "                    refit=True)\n",
+    "grid.fit(X_train, y_train)\n",
+    "# get NMSE\n",
+    "scores_nmse = grid.cv_results_['mean_test_score']\n",
+    "scores_std = grid.cv_results_['std_test_score']\n",
+    "\n",
+    "# compute standard errors\n",
+    "std_error = scores_std / np.sqrt(nb_folds)\n",
+    "\n",
+    "# get optimal alpha\n",
+    "i_max = np.argmax(scores_nmse)\n",
+    "\n",
+    "# Transform NMSE into MSE\n",
+    "scores_mse = -scores_nmse\n",
+    "\n",
+    "best_alpha = alphas[i_max]\n",
+    "best_score = scores_mse[i_max]\n",
+    "best_score_std = scores_std[i_max]\n",
+    "print(best_alpha, best_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "815dd3cd-63fc-4451-9c2c-588d046e46dc",
+   "metadata": {},
+   "source": [
+    "Ok à voir. En affinant l'échelle on retombe à peu près sur la même valeur donc pas d'inquiétude."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1029,11 +1183,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "id": "52428c16-db07-4202-bf97-8ada338b01b9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "opti_ridge = Ridge(alpha=1519.9, random_state=42)\n",
+    "opti_ridge.fit(X_train, y_train)\n",
+    "y_pred_ridge = opti_ridge.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "9e5ad11e-46b3-45f9-a7c1-4c8f0f992cf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# F-score ne fonctionne pas pour l'instant pourtant les deux arrays ont meme shape et dtype :("
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1068,11 +1236,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "id": "057e8c43-171d-47db-b48d-f1928c0dca6e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "68d811ea-b683-45d6-910a-1300dfc821f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest = RandomForestClassifier(max_depth=2, random_state=42)\n",
+    "forest.fit(X_train, y_train)\n",
+    "\n",
+    "y_forest_pred = forest.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "093f2387-52a1-442e-a90c-1554827f865c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On obtient un F-score de 0.823\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'On obtient un F-score de {round(f1_score(y_forest_pred, y_test), 3)}')"
+   ]
   },
   {
    "cell_type": "markdown",
